Bug 398453 - Add unconstrained size check for pagebreakframe reflow. r+sr=roc, a=blocking1.9+